<resources>
    <string name="app_name">Newsman</string>
    <string name="title_activity_main2">Newsman</string>
    <string name="title_home">Home</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_notifications">Notifications</string>

    <string name="headline_placeholder">Scientists Make Groundbreaking Discovery in Space Exploration</string>
    <string name="author_placeholder">John Smith</string>
    <string name="body_text_placeholder">In a remarkable turn of events, scientists have uncovered new evidence...</string>
    <string name="author">Al Jazeera</string>
    <string name="news_title">Cristiano Ronaldo’s comments on the Glazers were spot on as Man United ‘taken off the market’</string>
    <string name="_2_days_ago">2 days ago</string>
    <string name="save">Save</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="news_preference_header">News Preference</string>
    <string name="appearance_header">Appearance</string>

    <!-- Messages Preferences -->
    <string name="news_language">Language</string>
    <string name="app_theme">Theme</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>