<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/news_preference_header">

        <ListPreference
            app:defaultValue="en"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/news_language"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="us"
            app:entries="@array/region_entries"
            app:entryValues="@array/region_values"
            app:key="region"
            app:title="Region"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/appearance_header">

        <ListPreference
            app:defaultValue="light"
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="theme"
            app:title="@string/app_theme"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>