<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_notifications"
            app:destination="@id/navigation_read"
            />
        <action
            android:id="@+id/action_navigation_home_to_searchFragment"
            app:destination="@id/searchFragment" />
        <action
            android:id="@+id/action_navigation_home_to_settingsActivity"
            app:destination="@id/settingsActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.example.myapplication.ui.save.SavedFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_notifications"
            app:destination="@id/navigation_read" />
    </fragment>

    <fragment
        android:id="@+id/navigation_read"
        android:name="com.example.myapplication.ui.read.ReadFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_read" >
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_dashboard"
            app:destination="@id/navigation_saved" />
        <action
            android:id="@+id/action_navigation_notifications_to_navigation_home"
            app:destination="@id/navigation_home"
            app:popUpTo="@id/navigation_home"
            app:popUpToInclusive="true"

            />
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.example.myapplication.ui.search.SearchFragment"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_navigation_read"
            app:destination="@id/navigation_read" />
    </fragment>
    <activity
        android:id="@+id/settingsActivity"
        android:name="com.example.myapplication.SettingsActivity"
        android:label="SettingsActivity"
        tools:layout="@layout/settings_activity"
       />





</navigation>